--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,24 +5,35 @@
         <h2><span>Navigation</span></h2>
         {% include menu.html %}
       </div>
-      
+
       <div class="col c2">
         <h2><span>License</span></h2>
         <p>Flacon is released under the GNU Library Public License (LGPL) version 2. A copy of the license is available <a href="http://www.gnu.org/copyleft/lesser.html">here</a>. This is an open source project. You are free to download and distribute the software under the terms of the license.</p>
       </div>
-      
+
       <div class="col c3">
         <h2><span>My other projects</span></h2>
         <p><a href="http://razor-qt.org/">Razor-qt</a> - The free and open source lightweight desktop environment.</p>
         <p><a href="https://github.com/Boomaga/boomaga">Boomaga</a> - Boomaga (BOOklet MAnager) is a virtual printer for viewing a document before printing it out using the physical printer.</p>
       </div>
-      
+
       <div class="clr"></div>
     </div>
-    
-    
+
+
     <div class="footer">
       <p class="rf">This site based on <a target="_blank" href="http://www.free-css.com/assets/files/free-css-templates/preview/page165/devision/index.php">Devision Website Template</a> by <a target="_blank" href="http://www.freewebsitetemplatez.com/">FreeWebsiteTemplatez</a></p>
       <div class="clr"></div>
     </div>
   </div>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-21424676-7', 'flacon.github.io');
+  ga('send', 'pageview');
+
+</script>
