--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,9 +1,9 @@
 <div class="gadget">
   <h2>Download sources</h2>
   <ul class="sb_menu">
-    <li><a href="https://github.com/SokoloffA/flacon/archive/v0.9.1.tar.gz">Last stable version</a></li>
-    <li><a href="https://github.com/SokoloffA/flacon/tarball/master">Development version</a></li>
-    <li><a href="https://github.com/SokoloffA/flacon">Github repository</a></li>
+    <li><a href="{{ site.flacon.release.link }}">Last stable version ({{ site.flacon.release.version }})</a></li>
+    <li><a href="https://github.com/flacon/flacon/tarball/master">Development version</a></li>
+    <li><a href="https://github.com/flacon/flacon">Github repository</a></li>
   </ul>
 </div>
 
@@ -11,12 +11,10 @@
 <div class="gadget">
   <h2>Links</h2>
   <ul class="sb_menu">
-    <li><a href="https://github.com/SokoloffA/flacon/issues">Bug tracker</a></li>
-    <li><a href="https://github.com/SokoloffA/flacon">Git repository</a></li>
+    <li><a href="https://github.com/flacon/flacon/issues">Bug tracker</a></li>
+    <li><a href="https://github.com/flacon/flacon">Git repository</a></li>
     <li><a href="http://qt-apps.org/content/show.php/Flacon?content=125404">Page on qt-apps.org</a>
     <li><a href="http://kde-apps.org/content/show.php/Flacon?content=113388">Page on kde-apps.org</a>
   </ul>
 </div>
-
-
 
