--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,21 +3,20 @@
 <head>
 <title>{{ page.title }}</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link rel="icon" type="image/png" href="{{ site.baseurl}}/favicon.png" />
-<link href="{{ site.baseurl}}/css/style.css" rel="stylesheet" type="text/css" />
-<link href="{{ site.baseurl}}/css/default.css" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="{{ site.baseurl}}/js/cufon-yui.js"></script>
-<script type="text/javascript" src="{{ site.baseurl}}/js/arial.js"></script>
-<script type="text/javascript" src="{{ site.baseurl}}/js/cuf_run.js"></script>
+<link rel="icon" type="image/png" href="/favicon.png" />
+<link href="/css/style.css" rel="stylesheet" type="text/css" />
+<link href="/css/default.css" rel="stylesheet" type="text/css" />
+<script type="text/javascript" src="/js/cufon-yui.js"></script>
+<script type="text/javascript" src="/js/arial.js"></script>
+<script type="text/javascript" src="/js/cuf_run.js"></script>
 
-<script type="text/javascript" src="{{ site.baseurl}}/highslide/highslide-with-gallery.js"></script>
+<script type="text/javascript" src="/highslide/highslide-with-gallery.js"></script>
 <script type="text/javascript">
    hs.allowMultipleInstances = false;
    hs.wrapperClassName = "img_popup";
-   hs.graphicsDir = '{{ site.baseurl}}/highslide/graphics/';
+   hs.graphicsDir = '/highslide/graphics/';
 </script>
-{% include google_analitics.js %}
-<link rel="stylesheet" type="text/css" href="{{ site.baseurl}}/highslide/highslide.css" />
+<link rel="stylesheet" type="text/css" href="/highslide/highslide.css" />
 
 </head>
 <body>
@@ -26,7 +25,7 @@
 <div class="header">
   <div class="header_resize">
     <div class="logo">
-      <h1><a href="{{ site.baseurl}}/index.html">Flac<span>on</span></a><small></small></a></h1>
+      <h1><a href="/index.html">Flac<span>on</span></a><small></small></a></h1>
     </div>
     <div class="menu_nav">
       {% include menu.html %}
