--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,24 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<title>{{ page.title }}</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link rel="icon" type="image/png" href="/favicon.png" />
-<link href="/css/style.css" rel="stylesheet" type="text/css" />
-<link href="/css/default.css" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="/js/cufon-yui.js"></script>
-<script type="text/javascript" src="/js/arial.js"></script>
-<script type="text/javascript" src="/js/cuf_run.js"></script>
-
-<script type="text/javascript" src="/highslide/highslide-with-gallery.js"></script>
-<script type="text/javascript">
-   hs.allowMultipleInstances = false;
-   hs.wrapperClassName = "img_popup";
-   hs.graphicsDir = '/highslide/graphics/';
-</script>
-<link rel="stylesheet" type="text/css" href="/highslide/highslide.css" />
-
-</head>
+{% include html_head.html css="/css/default.css" %}
 <body>
 <div class="main">
 
