--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <div class="gadget">
   <h2>Download sources</h2>
   <ul class="sb_menu">
-    <li><a href="{{ site.flacon.release.link }}">Last stable version ({{ site.flacon.release.version }})</a></li> (<a href="/changelog">Changelog</a>)
+    <li><a href="{{ site.flacon.release.link }}/v{{ site.flacon.release.version }}.tar.gz">Last stable version ({{ site.flacon.release.version }})</a></li> (<a href="/changelog">Changelog</a>)
     <li><a href="https://github.com/flacon/flacon/tarball/master">Development version</a></li>
     <li><a href="https://github.com/flacon/flacon">Github repository</a></li>
   </ul>
