--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,12 +1,12 @@
-<div class="gadget">
-  <h2>Download sources</h2>
-  <ul class="sb_menu">
-    <li><a href="{{ site.flacon.release.link }}/v{{ site.flacon.release.version }}.tar.gz">Last stable version ({{ site.flacon.release.version }})</a></li> (<a href="/changelog">Changelog</a>)
-    <li><a href="https://github.com/flacon/flacon/tarball/master">Development version</a></li>
-    <li><a href="https://github.com/flacon/flacon">Github repository</a></li>
-  </ul>
+<div class="gadget anounce">
+{% for post in site.categories.changelog limit:1 %}
+  <h2>Flacon {{post.version}} is out!</h2>
+We are glad to announce a new version of the flacon. The most noticeable change are:
+	{{ post.content }}<div class="date">{{ post.date | date_to_string}}</div>
+	{% endfor %}
+	<p>
+	<a href="/changelog">Full changelog</a>
 </div>
-
 
 <div class="gadget">
   <h2>Links</h2>
