--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
 	margin:0;
 	padding:0;
 	width:100%;
-	color:#6a6a6a;
+	color:#3a3a3a;
 	font:normal 12px/1.8em Arial, Helvetica, sans-serif;
 }
 html, .main {
@@ -244,21 +244,35 @@ a.rm, a.com {
 .content .sidebar .gadget {
 	margin:0 0 20px 0;
 	padding:0px 20px 0px 20px;
-	width:230px;
+	width:300px;
 }
 /*.gadget h2 {
   font:normal 15px Arial, Helvetica, sans-serif;
 }
 */
+.announce ul,
 ul.sb_menu, ul.ex_menu {
 	margin:0;
 	padding:0;
 	list-style:none;
-	color:#959595;
 }
+
+.anounce ul li {
+	margin:0;
+	background:url(li_a_hover.gif) left no-repeat;
+	padding:4px 0 4px 22px;
+	list-style-type: none;
+}
+
+.anounce .date {
+	font-style: italic;
+	margin: 0 0 0 150px;
+}
+
 ul.sb_menu li, ul.ex_menu li {
 	margin:0;
 }
+
 ul.sb_menu li {
 	padding:4px 0 4px 12px;
 	width:220px;
@@ -266,21 +280,27 @@ ul.sb_menu li {
 ul.ex_menu li {
 	padding:4px 0 8px 12px;
 }
+
 ul.sb_menu li a, ul.ex_menu li a {
-	color:#959595;
+	color:#3a3a3a;
 	text-decoration:none;
 	margin-left:-12px;
 	padding-left:22px;
 	background:url(li_a_hover.gif) left no-repeat;
 }
+
+
 ul.sb_menu li a:hover, ul.ex_menu li a:hover {
 	color:#78bbe6;
 	text-decoration:underline;
 	background:url(li_a.gif) left no-repeat;
 }
+
+
 ul.sb_menu li a:hover {
 	text-decoration:underline;
 }
+
 ul.ex_menu li a:hover {
 	text-decoration:none;
 }
