--- a/_includes/html_head.html
+++ b/_includes/html_head.html
@@ -18,5 +18,5 @@
    hs.graphicsDir = '/highslide/graphics/';
 </script>
 <link rel="stylesheet" type="text/css" href="/highslide/highslide.css" />
-
+<link rel="stylesheet" href="/css/octicons/octicons.css">
 </head>
