Fix: unclosed <a> tag

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -13,6 +13,6 @@
 
   <li><a href="https://github.com/flacon/flacon/issues">Bug tracker</a></li>
 
-  <li><a href="https://github.com/Flacon/flacon"><span class="octicon octicon-mark-github"></span></li>
+  <li><a href="https://github.com/Flacon/flacon"><span class="octicon octicon-mark-github"></span></a></li>
  
 </ul>
