--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -9,6 +9,9 @@
   {% if page.menuItem == "download" %}<li class="active">{% else %}<li>{% endif %}
   <a href="/download/">Download</a></li>
 
+  {% if page.menuItem == "donate" %}<li class="active">{% else %}<li>{% endif %}
+  <a href="/donate/">Donate</a></li>
+
   <li><a href="https://github.com/flacon/flacon/wiki">Wiki</a></li>
 
   <li><a href="https://github.com/flacon/flacon/issues">Bug tracker</a></li>
