--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,6 +9,15 @@ We are glad to announce a new version of the flacon. The most noticeable change 
 </div>
 
 <div class="gadget">
+  <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+  <input type="hidden" name="cmd" value="_s-xclick">
+  <input type="hidden" name="hosted_button_id" value="XVRVWTQL5WERG">
+  <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+  <img alt="" border="0" src="https://www.paypalobjects.com/ru_RU/i/scr/pixel.gif" width="1" height="1">
+  </form>
+</div>
+
+<div class="gadget">
   <h2>Links</h2>
   <ul class="sb_menu">
     <li><a href="https://github.com/flacon/flacon/issues">Bug tracker</a></li>
