--- a/css/style.css
+++ b/css/style.css
@@ -246,22 +246,11 @@ a.rm, a.com {
 	padding:0px 20px 0px 20px;
 	width:300px;
 }
-/*.gadget h2 {
-  font:normal 15px Arial, Helvetica, sans-serif;
-}
-*/
+
 .announce ul,
 ul.sb_menu, ul.ex_menu {
 	margin:0;
 	padding:0;
-	list-style:none;
-}
-
-.anounce ul li {
-	margin:0;
-	background:url(li_a_hover.gif) left no-repeat;
-	padding:4px 0 4px 22px;
-	list-style-type: none;
 }
 
 .anounce .date {
@@ -269,12 +258,7 @@ ul.sb_menu, ul.ex_menu {
 	margin: 0 0 0 150px;
 }
 
-ul.sb_menu li, ul.ex_menu li {
-	margin:0;
-}
-
 ul.sb_menu li {
-	padding:4px 0 4px 12px;
 	width:220px;
 }
 ul.ex_menu li {
@@ -284,9 +268,6 @@ ul.ex_menu li {
 ul.sb_menu li a, ul.ex_menu li a {
 	color:#3a3a3a;
 	text-decoration:none;
-	margin-left:-12px;
-	padding-left:22px;
-	background:url(li_a_hover.gif) left no-repeat;
 }
 
 
@@ -366,7 +347,8 @@ ul.ex_menu li a:hover {
 }
 /* ****************** */
 li{
-   list-style-position: inside;
+   margin: 0 0 0 22px;
+   padding: 4px 0 4px 4px;
 }
 /* ****************** */
 .footer {
