--- a/_includes/html_head.html
+++ b/_includes/html_head.html
@@ -4,7 +4,14 @@
 <title>{{ page.title }}</title>
 <meta name="keywords" content="cue, flacon, converter, ape, flac, mp3, cd, ogg">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link rel="icon" type="image/png" href="/favicon.png" />
+<link rel="icon" type="image/png" href="/favicon-16x16.png"   sizes="16x16"   />
+<link rel="icon" type="image/png" href="/favicon-32x32.png"   sizes="32x32"   />
+<link rel="icon" type="image/png" href="/favicon-48x48.png"   sizes="48x48"   />
+<link rel="icon" type="image/png" href="/favicon-64x64.png"   sizes="64x64"   />
+<link rel="icon" type="image/png" href="/favicon-128x128.png" sizes="128x128" />
+<link rel="icon" type="image/png" href="/favicon-256x256.png" sizes="256x256" />
+<link rel="icon" type="image/png" href="/favicon-512x512.png" sizes="512x512" />
+
 <link href="/css/style.css" rel="stylesheet" type="text/css" />
 <link href="{{ include.css }}" rel="stylesheet" type="text/css" />
 
