--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,6 +23,8 @@
     <div class="footer">
       <p class="rf">This site based on <a target="_blank" href="http://www.free-css.com/assets/files/free-css-templates/preview/page165/devision/index.php">Devision Website Template</a> by <a target="_blank" href="http://www.freewebsitetemplatez.com/">FreeWebsiteTemplatez</a></p>
       <div class="clr"></div>
+      <p class="rf">Favicon made by <a target="_blank" href=https://www.flaticon.com/free-icon/turntable_178143>www.flaticon.com</a></p>
+      <div class="clr"></div>
     </div>
   </div>
 
