--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <div class="gadget anounce">
 {% for post in site.categories.changelog limit:1 %}
   <h2>Flacon {{post.version}} is out!</h2>
-We are glad to announce a new version of the flacon. The most noticeable change are:
+<!--We are happy to announce a new version of the flacon. The most noticeable change are:-->
 	{{ post.content }}<div class="date">{{ post.date | date_to_string}}</div>
 	{% endfor %}
 	<p>
