Typo paypall->paypal

--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -161,7 +161,7 @@
 		width: 200px;
 	}
 
-	button.paypall {
+	button.paypal {
 		background-color: #ffc43a;
 		border: 1px solid #daa730;
 		color: #333;
