--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,21 +11,20 @@
             <div class="footer-block">
                 <h2>License</h2>
                 <p>
-                    Flacon is released under the GNU Library Public License (LGPL) version 2. 
-                    A copy of the license is available <a target="_blank" href="http://www.gnu.org/copyleft/lesser.html">here</a>. 
+                    Flacon is released under the GNU Library Public License (LGPL) version 2.
+                    A copy of the license is available <a target="_blank" href="http://www.gnu.org/copyleft/lesser.html">here</a>.
                     This is an open source project. You are free to download and distribute the software under the terms of the license.</p>
             </div>
             <div class="footer-block">
                 <h2>My other projects</h2>
                 <p>
-                    <a href="https://github.com/Boomaga/boomaga">Boomaga</a> - Boomaga (BOOklet MAnager) is a virtual printer for viewing 
-                    a document before printing it out using the physical printer.
+                    <a href="https://github.com/SokoloffA/radiola">Radiola</a> - lightweight Internet radio player for MacOS.
                 </p>
             </div>
         </div>
 
         <p class="copyright">
-            <a target="_blank" href=https://www.flaticon.com/free-icon/turntable_178143>Favicon by Flaticon</a> 
+            <a target="_blank" href=https://www.flaticon.com/free-icon/turntable_178143>Favicon by Flaticon</a>
 
             •
 
